--- a/App_Gestion/src/main/webapp/WEB-INF/web.xml
+++ b/App_Gestion/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,7 @@
          version="6.0">
 
     <welcome-file-list>
-        <welcome-file>connexion.jsp</welcome-file>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>Connexion.jsp</welcome-file>
     </welcome-file-list>
 
 </web-app>
