--- a/App_Gestion/src/main/webapp/WEB-INF/pom.xml
+++ b/App_Gestion/src/main/webapp/WEB-INF/pom.xml
@@ -15,20 +15,20 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jakarta.servlet.api.version>6.0.0</jakarta.servlet.api.version>
         <mysql.connector.version>8.0.33</mysql.connector.version>
-        <itext.version>5.5.13.3</itext.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.itextpdf</groupId>
-            <artifactId>itextpdf</artifactId>
-            <version>${itext.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.connector.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.30</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
